Multi-project with reflect and compiler