@@ -3,6 +3,11 @@ addCompilerPlugin("com.lihaoyi" %% "acyclic" % "0.1.3")
 
 lazy val commonSettings = Seq(
 	scalaVersion := "2.11.7"
+	// fork in (Compile, run) := true,
+	// javaOptions in (Compile, run) += "-Xmx4G",
+	// javaOptions in (Compile, run) += "-XX:-UseGCOverheadLimit",
+	// javaOptions in (Compile, run) += "-XX:+UseConcMarkSweepGC"
+	// javaOptions in (Compile, run) += "-XX:+UseG1GC"
 )
 
 lazy val scalaReflectJS = (project in file("sjs-reflect")).
@@ -15,7 +20,11 @@ lazy val scalaCompilerJS = (project in file("sjs-compiler")).
 	dependsOn(scalaReflectJS).
 	settings(commonSettings: _*).
 	settings(
-		name := "Scala compiler JS"
+		name := "Scala compiler JS",
+		libraryDependencies ++= Seq(
+  		"org.apache.ant" % "ant" % "1.9.6",
+  		"org.scala-lang.modules" % "scala-asm" % "latest.integration"
+  	)
 	)
 
 lazy val root = (project in file(".")).
@@ -38,7 +47,7 @@ lazy val root = (project in file(".")).
 		//libraryDependencies += "io.spray" % "spray-routing_2.11" % "1.3.3",
 		//libraryDependencies += "com.lihaoyi" %%% "upickle" % "0.3.8",
 		//libraryDependencies += "com.lihaoyi" %%% "autowire" % "0.2.5",
-		//libraryDependencies += "org.scala-lang" % "scala-compiler" % "2.11.7",
+		// libraryDependencies += "org.scala-lang" % "scala-compiler" % "2.11.7",
 		libraryDependencies += "com.typesafe.akka" % "akka-actor_2.11" % "2.4.2",
 		libraryDependencies += "org.scala-lang.modules" % "scala-async_2.11" % "0.9.5",
 		autoCompilerPlugins := true
